# BJPico

./: README.md
hello_multicore/: CMakeLists.txt  multicore.cpp
hello_multicore/Classes/: card.cpp  shoe.cpp  shoe.h  table.cpp  table.h
